Set darkmode.js local

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <iframe src="template.html" frameborder="0" width="100%" height="1000px"></iframe>
 
-        <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.4/lib/darkmode-js.min.js"></script>
+        <script src="darkmode.js"></script>
         <script>
             const darkmode =  new Darkmode();
 
