--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
         <title>Darkmode</title>
     </head>
     <body>
-        <button onclick="toggleDarkMode()">Toggle darkmode</button>
+        <button onclick="toggleDarkMode()" style="position: sticky; top: 0; z-index: 10000; left:0">Toggle darkmode</button>
 
-        <iframe src="template.html" frameborder="0" width="100%" height="1000px"></iframe>
+
 
         <script src="darkmode.js"></script>
+        <script src="jquery-3.4.1.js"></script>
+        <script>
+            (function() {
+                $.getJSON( "test.json", function( data ) {
+                    const items = [];
+                    $.each( data.messages, function( key, val ) {
+                        items.push( val.htmlBody );
+                    });
+
+                    $( "<div/>", {
+                        "class": "my-new-list",
+                        html: items.join( "" )
+                    }).appendTo( "body" );
+                });
+            })();
+        </script>
         <script>
             const darkmode =  new Darkmode();
 
